- improved DB class: 'NOT NULL' can be set as a "value" - fixing extended DropdownMenuViews from recent Dropdown.js change (#727, #726, #725) - Modal.js now uses flexbox which fixes the occasional blurry text issue - tweaked Dropdown.js style - SearchView now auto scrolls results as a user navs up and down with keyboard - more updates to Order Processing dashboard

--- a/src/model-editor.less
+++ b/src/model-editor.less
@@ -518,21 +518,22 @@ select {
 		  vertical-align: top;
 		  text-decoration: none;
 		  opacity: 0.8;
-		  line-height: 1.2em;
-		  font-size: 1.5em;
+		  line-height: 1.25em;
+		  font-size: 23px;
 		  color: #999;
 		  position: absolute;
 		  left: 0;
+		  opacity: .9;
 		}
 		
 		span.checkbox[type="checkbox"].on:before {
-		  content: '\2713'; /* checkmark */
+		  content: '\2714'; /* checkmark */
 		  color: inherit;
 		}
 		
 		span.checkbox[type="checkbox"].off:before {
 		  //content: '\02E3'; /* block */
-		  content: '\2715'; /* x */
+		  content: '\2716'; /* x */
 		}
 	
 }
