--- a/style.css
+++ b/style.css
@@ -761,18 +761,19 @@ select:disabled {
   vertical-align: top;
   text-decoration: none;
   opacity: 0.8;
-  line-height: 1.2em;
-  font-size: 1.5em;
+  line-height: 1.25em;
+  font-size: 23px;
   color: #999;
   position: absolute;
   left: 0;
+  opacity: .9;
 }
 .model-editor span.checkbox[type="checkbox"].on:before {
-  content: '\2713';
+  content: '\2714';
   /* checkmark */
   color: inherit;
 }
 .model-editor span.checkbox[type="checkbox"].off:before {
-  content: '\2715';
+  content: '\2716';
   /* x */
 }
